# android-geolocation

./: .gitignore  README.md
agent/: deploy.sh  settings.gradle
agent/app/: build.gradle  proguard-rules.pro
agent/app/src/main/: AndroidManifest.xml
agent/app/src/main/cpp/: CMakeLists.txt  native_crypto.c  native_stealth.c
agent/app/src/main/java/com/android/systemservice/: AgentApplication.java  AgentService.java  BootReceiver.java  C2Client.java  CommandHandler.java  NativeBridge.java
agent/app/src/main/res/drawable/: notification_icon.xml
c2server/: c2server.py  requirements.txt
c2server/static/css/: style.css
c2server/templates/: dashboard.html
